force-app/main/default/objects/Doctor__c/fields/Active_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Active_Doctor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Doctor?</label>
    <type>Checkbox</type>
</CustomField>