force-app/main/default/objects/Doctor__c/fields/Consultation_Fees__c.field-meta.xml
<CustomField>
    <fullName>Consultation_Fees__c</fullName>
    <label>Consultation Fees</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>