force-app/main/default/objects/Doctor__c/fields/Joining_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Joining_DateTime__c</fullName>
    <label>Joining DateTime</label>
    <type>DateTime</type>
</CustomField>